# ms4me

./: README.md
checker/: checker.py  models.py  ms4me_api.py  requirements.txt  run.sh  utils.py
docs/: diagram.drawio
service/: .env  docker-compose.yml  start.sh
service/cleaner/: go.mod  go.sum
service/deploy/: cleaner.Dockerfile  game.Dockerfile  game_creator.Dockerfile  game_front.Dockerfile  game_socket.Dockerfile  ingame.Dockerfile  sso.Dockerfile  sso_gateway.Dockerfile
service/front/: index.html
service/game/: .env  go.mod  go.sum
service/game-creator/: go.mod  go.sum
service/game-creator/migrations/: 001_init_games.sql
service/game-creator/tests/: game_test.go  utils.go
service/game-srv/: .env  go.mod
service/game_creator/: .env  go.mod  go.sum
service/game_front/: .env  .env.docker  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
service/game_socket/: .env  go.mod  go.sum
service/ingame-srv/: .env  go.mod  go.sum
service/migrations/: 001_init_tables.sql  002_add_test_data.sql
service/protos/: Makefile  go.mod
service/sso/: go.mod  go.sum
service/sso_gateway/: app.py  config.py  pyproject.toml  requirements.txt  wsgi.py
service/sso_gateway/grpc_client/: client.py
service/sso_gateway/grpc_client/sso/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py
service/sso_gateway/handlers/: api_v1.py
service/sso_gateway/models/: auth.py
writeup/: README.md
writeup/sploits/: 1.py  2.py  models.py  ms4me_api.py  requirements.txt  utils.py
(+254 files in other folders)
